// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logger debug should not show log if showDebug is false 1`] = `[]`;

exports[`logger debug should not show log if showDebug is false 2`] = `
[
  [
    "./test-logs/logger.test.js.2012.12.26_07.40.00.000.log",
    "2012-12-26 07:40:00.000	test string
",
  ],
]
`;

exports[`logger debug should show log if showDebug is true 1`] = `
[
  [
    "2012-12-26 07:40:00.000	test string",
  ],
]
`;

exports[`logger debug should show log if showDebug is true 2`] = `
[
  [
    "./test-logs/logger.test.js.2012.12.26_07.40.00.000.log",
    "2012-12-26 07:40:00.000	test string
",
  ],
]
`;

exports[`logger error should apply red bright color to console 1`] = `
[
  [
    "2012-12-26 07:40:00.000	<red>test1 /^\\d+$/ {
    "b": 2
}</red>
    at test.js:1:1
    at index.js:1:1",
  ],
]
`;

exports[`logger error should apply red bright color to console 2`] = `
[
  [
    "./test-logs/logger.test.js.2012.12.26_07.40.00.000.log",
    "2012-12-26 07:40:00.000	test1 /^\\d+$/ {
    "b": 2
}
    at test.js:1:1
    at index.js:1:1
",
  ],
]
`;

exports[`logger info should apply green bright color to console 1`] = `
[
  [
    "2012-12-26 07:40:00.000	<green>test1 /^\\d+$/ {
    "b": 2
}</green>",
  ],
]
`;

exports[`logger info should apply green bright color to console 2`] = `
[
  [
    "./test-logs/logger.test.js.2012.12.26_07.40.00.000.log",
    "2012-12-26 07:40:00.000	test1 /^\\d+$/ {
    "b": 2
}
",
  ],
]
`;

exports[`logger log should log object 1`] = `
[
  [
    "2012-12-26 07:40:00.000	{
    "a": 1,
    "second key": {
        "date": "26.12.2012, 07:40:00"
    }
}",
  ],
]
`;

exports[`logger log should log object 2`] = `
[
  [
    "./test-logs/logger.test.js.2012.12.26_07.40.00.000.log",
    "2012-12-26 07:40:00.000	{
    "a": 1,
    "second key": {
        "date": "26.12.2012, 07:40:00"
    }
}
",
  ],
]
`;

exports[`logger log should log string 1`] = `
[
  [
    "2012-12-26 07:40:00.000	test string",
  ],
]
`;

exports[`logger log should log string 2`] = `
[
  [
    "./test-logs/logger.test.js.2012.12.26_07.40.00.000.log",
    "2012-12-26 07:40:00.000	test string
",
  ],
]
`;

exports[`logger log should log string, regex and object 1`] = `
[
  [
    "2012-12-26 07:40:00.000	test1 /^\\d+$/ {
    "b": 2
}",
  ],
]
`;

exports[`logger log should log string, regex and object 2`] = `
[
  [
    "./test-logs/logger.test.js.2012.12.26_07.40.00.000.log",
    "2012-12-26 07:40:00.000	test1 /^\\d+$/ {
    "b": 2
}
",
  ],
]
`;

exports[`logger log should log two strings 1`] = `
[
  [
    "2012-12-26 07:40:00.000	test1 test2",
  ],
]
`;

exports[`logger log should log two strings 2`] = `
[
  [
    "./test-logs/logger.test.js.2012.12.26_07.40.00.000.log",
    "2012-12-26 07:40:00.000	test1 test2
",
  ],
]
`;

exports[`logger trace should append stack and not show log if showDebug is false 1`] = `[]`;

exports[`logger trace should append stack and not show log if showDebug is false 2`] = `
[
  [
    "./test-logs/logger.test.js.2012.12.26_07.40.00.000.log",
    "2012-12-26 07:40:00.000	test string
    at test.js:1:1
    at index.js:1:1
",
  ],
]
`;

exports[`logger trace should append stack and show log if showDebug is true 1`] = `
[
  [
    "2012-12-26 07:40:00.000	test string
    at test.js:1:1
    at index.js:1:1",
  ],
]
`;

exports[`logger trace should append stack and show log if showDebug is true 2`] = `
[
  [
    "./test-logs/logger.test.js.2012.12.26_07.40.00.000.log",
    "2012-12-26 07:40:00.000	test string
    at test.js:1:1
    at index.js:1:1
",
  ],
]
`;

exports[`logger warn should apply yellow bright color to console 1`] = `
[
  [
    "2012-12-26 07:40:00.000	<yellow>test1 /^\\d+$/ {
    "b": 2
}</yellow>",
  ],
]
`;

exports[`logger warn should apply yellow bright color to console 2`] = `
[
  [
    "./test-logs/logger.test.js.2012.12.26_07.40.00.000.log",
    "2012-12-26 07:40:00.000	test1 /^\\d+$/ {
    "b": 2
}
",
  ],
]
`;
